# stood-ai-agent

./: Cargo.toml  NOVA_PREMIER_TEST_REPORT.md  README.md
.github/: CODEOWNERS
examples/: 007_debug_logging.rs  011_basic_agent.rs  014_mcp_configuration_examples.rs  016_context_management.rs  017_parallel_execution.rs  018_task_evaluation.rs  019_agent_based_evaluation.rs  020_multi_perspective.rs  021_agentic_chat.rs  025_cloudwatch_observability.rs  026_nebula_evaluation_test.rs  027_tool_approval_middleware.rs  030_test_mistral.rs  031_test_mistral_large3.rs  032_test_mistral_tools.rs  033_prompt_caching.rs  string_model_select.rs
examples/022_aws_doc_mcp/: 022_aws_documentation_mcp.rs  README.md  VERIFICATION_GUIDE.md
examples/023_telemetry/: metrics_test.rs  telemetry_demo.rs
examples/common/: model_selection.rs
src/agent/: conversation.rs  event_loop.rs  integration_tests.rs  llm_integration_test.rs  mod.rs  tools_integration_tests.rs
src/context_manager/: mod.rs
src/conversation_manager/: mod.rs
src/llm/: integration_test.rs  mod.rs  string_model.rs  traits.rs
src/llm/models/: mod.rs
src/llm/providers/: anthropic.rs  bedrock.rs  lm_studio.rs
src/llm/tests/: lm_studio_integration.rs  provider_integration.rs
src/mcp/: mod.rs
src/telemetry/: mod.rs
src/tools/: mcp_e2e_tests.rs  mcp_performance_tests.rs
src/types/: agent.rs  tools.rs
tests/: core_safety_telemetry_tests.rs  telemetry_cloudwatch_integration.rs  test_claude_debug.rs  test_direct_bedrock.rs  test_environment_debugging_utilities.rs  test_nova2_via_config.rs  test_nova_debug.rs  test_nova_direct_minimal.rs  test_nova_direct_streaming_tools.rs  test_nova_event_loop_debug.rs  test_nova_file_read_agent_debug.rs  test_nova_file_read_debug.rs  test_nova_non_streaming.rs  test_nova_non_streaming_tool.rs  test_nova_tool_calls.rs  test_nova_tool_execution_bug.rs  test_nova_tool_params.rs  test_nova_tool_result_format.rs  test_retry_integration.rs  test_verify_nova_fix.rs
tests/fixtures/: mod.rs  models.rs
tests/provider_integration/: verify.rs
tests/provider_integration/providers/lm_studio/: core.rs
tests/provider_integration/shared/: test_cases.rs  token_counting_tests.rs
